wide and full alignments fixes in backend

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -50,6 +50,12 @@ body.post-type-post .editor-styles-wrapper {
 	.editor-styles-wrapper .wp-block {
 		max-width: 960px;
 	}
+
+	.editor-styles-wrapper .is-root-container .wp-block[data-align="full"] {
+		max-width: 100%;
+		margin-left: 0px;
+		margin-right: 0px;
+	}
 }
 
 @media only screen and (min-width: 992px) {
@@ -63,10 +69,17 @@ body.post-type-post .editor-styles-wrapper {
 		max-width: 1140px;
 	}
 
-	.editor-styles-wrapper .is-root-container .wp-block[data-align="full"] {
-		max-width: 100%;
-		margin-left: 0px;
-		margin-right: 0px;
+	.post-type-post .editor-styles-wrapper .is-root-container .wp-block[data-align="wide"] {
+		width: 120%;
+		max-width: 1482px;
+		margin-left: -10%;
+		margin-right: -10%;
+	}
+
+	.post-type-post .editor-styles-wrapper .is-root-container .wp-block[data-align="full"] {
+		max-width: 100vw;
+		margin-left: calc((-100vw + 100%)/ 2);
+		margin-right: calc((-100vw + 100%)/ 2);
 	}
 
 	.edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .block-editor-block-list__layout {
